fixing mobile view overflow

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -2,6 +2,10 @@
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
+html{
+	overflow-x: hidden;
+}
+
 #to-top{
 	position: fixed;
 	z-index: 50;
